# chatbot

./: .gitignore  README.md  chatbot.py  main.py  pyproject.toml
app/: bot.py  ui.py
